css/style.css
/* ... */
p {
	font-size: 16px;
	line-height: 1.3rem;
	font-weight: var(--font-weight-heavy);
}

.scroll-button {
	text-decoration: underline;
}

.link-text > a {
  list-style-type: none;
  position: relative;
  display: inline-block;
  padding-bottom: 3px; /* To accommodate the border */
}

.link-text > a {
	display: inline-block;
}

.link-text > a::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%; /* Initial width */
  height: 1px; /* Height of the border */
  background-color: var(--border-color); /* Color of the border */
  transition: none; /* No transition needed initially */
}

.link-text > a:hover {
	cursor: pointer;
	color: var(--secondary-color) ;
}

.link-text-p {
  position: relative;
  display: inline-block;
  padding-bottom: 3px; /* To accommodate the border */
  display: inline-block;

}

.link-text-p::after {
	  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%; /* Initial width */
  height: 1px; /* Height of the border */
  background-color: var(--border-color); /* Color of the border */
  transition: none; /* No transition needed initially */
}

.link-text-p:hover {
		cursor: pointer;
	color: var(--secondary-color) ;

}

/* ====== NAVIGATION HEADER ===== */

header {
	margin: 0;
	height: auto;
	position: fixed;
	width: 100vw;
	z-index: 500;
}

.hamburger {
  display: none;
  font-size: 30px;
  cursor: pointer;
}

#header-top {
  background-color: transparent;
  transition: background-color 0.2s ease-in-out;
}

.navigation {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	height: 50px;
	padding: 12px;
	padding-left: 50px;
	padding-right: 50px;
}

.logo {
	padding-top: 5px;
}

.logo img {
	width: 130px;
	height: auto;
}

.link-list {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	gap: 30px;
}

.link-list-item {
	padding: 6px;
	list-style-type: none;
  position: relative;
  display: inline-block;
  padding-bottom: 3px;
  transition: padding-bottom 0.2s ease; 
  }

.link-list-item > a::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0; /* Initial width */
  height: 1px; /* Height of the border */
  background-color: var(--border-color); /* Color of the border */
  transition: width 0.2s ease; /* Transition for width */
}

.link-list-item > a:hover::after {
  width: 100%; /* Width to expand to */
  cursor: pointer;
}

.link-list-item.selected {
  padding: 6px;
  list-style-type: none;
  position: relative;
  display: inline-block;
  padding-bottom: 3px; /* To accommodate the border */
}

.link-list-item.selected > a::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%; /* Initial width */
  height: 1px; /* Height of the border */
  background-color: var(--border-color); /* Color of the border */
  transition: none; /* No transition needed initially */
}

.call-list {
	border: 1px solid var(--border-color);
	border-radius: 20px;
	padding: 6px;
	list-style-type: none;
	background-color: var(--primary-color);
}

.call-list:hover {
	cursor: pointer;
	background-color: var(--contrast-bg-color);
	color: var(--contrast-text-color);
}

.call-list:hover > a{
		color: var(--contrast-text-color);
}

.calls{
	gap: 30px;
}

/* ====== MAIN LAYOUT ===== */

main {
	padding: 0;
	margin: 0;
	height: 100vh;
	flex: 1;
	overflow-x: hidden;
	overflow-y: scroll;
}

/* Header */

.main-header {
	padding-top: 160px;
	height: 20vh;
	width: 100%;
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: center;
	padding-bottom: 0;
}

.main-header > h1 {
	width: 80%;
	margin: 0px 0px 20px 0px;
}

.main-header > p {
	width: 80%;
	margin: 0;
	padding: 0;
}


/* Inner Header */

.inner-header {
	padding-top: 0px;
	height: 35vh;
	width: 80%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	margin: auto;
}

.inner-header > h1 {
	width: 100%;
	margin: 0px 0px 20px 30px;
}

.inner-header > p {
	width: 80%;
	margin: 0;
	padding: 0;
}

/* Table */

.inner-table {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	height: auto;
	margin: auto;
	width: 80%;
}

.table-box {
	display: flex;
	flex-direction: row;
	justify-content: center;
	height: auto;
	border-top: 0.3px solid var(--border-color);
}


.table-box-details {
	margin: 20px;
	padding-top: 30px;
	width: 50%;
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: flex-start;
	border-left: 0px;
	border-right: 0px;
}

.table-box-details > h3 {
	margin: 0px;
}

.table-box-info {
	padding: 20px 40px 0px 20px;
	margin: 0px;
	width: 50%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	border-left: 1px solid var(--border-color);
	border-left: 0px;
	border-right: 0px;
}



.table-box-info > p {
	width: 100%;
	padding: 0px;
	margin-top: 0px;
	margin-bottom: 40px;
}

/* ====== HOME PAGE ===== */

.landing-header {
	background-image: url("../images/background.jpeg");
	background-position: bottom left;
	width: 100%;
	height: 100vh;
	padding: 0;
	margin: 0;
	display: flex;
	justify-content: flex-start;
	flex-direction: column;
	align-items: center;
	border-bottom: 0.3px solid var(--border-color);
}

.landing-header.inner {
	background-image: unset;
	background-color: var(--primary-color) ;
	background-position: top right;
	background-size: 235%;
	border-top: 0.3px solid black;

}

.landing-header-container{
	height: 100vh;
	width: 100vw;
	margin: auto;
	padding: 0;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: flex-start;
	box-sizing: border-box;
	overflow: hidden;
}


.landing-header-box {
	width: 80%;
	height: 90%;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: flex-start;
	box-sizing: border-box;
	margin: auto;
	padding: 0;
	overflow: hidden;
}
/* ... */

